# rust-jsr-registry

./: Cargo.toml  LICENSE  MIGRATION.md  README.md
example/: README.md
example/find_npm_comp_meta/: Cargo.toml  README.md
example/find_npm_comp_meta/src/: main.rs
example/find_package/: Cargo.toml  README.md
example/find_package/src/: main.rs
src/: default_url.rs  fetcher.rs  lib.rs  private_tools.rs  serde.rs  types.rs
src/types/: error.rs  graph.rs  info.rs  meta.rs  package.rs
