[package]
name = "rust-jsr-registry"
description = "An unofficial JSR api wrapper for rust. JSR is an npm-like registry owned by Deno"
repository = "https://github.com/teamdunno/rust-jsr-registry"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.97"
once_cell = "1.21.3"
reqwest = "0.12.15"
semver = "1.0.26"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
url = "2.5.4"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
implicit_return = "deny"
needless_return = "allow"

[features]
unstable = []
