[package]
name = "rust-jsr-registry"
description = "An unofficial JSR api wrapper for rust. JSR is a npm-like registry owned by Deno"
repository = "https://github.com/teamdunno/rust-jsr-registry"
version = "0.2.0"
edition = "2021"
license = "MIT"
exclude = ["example"]
[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
once_cell = "1.21.3"
reqwest = "0.12.15"
semver = "1.0.26"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde-semver = "0.2.1"
serde_json = "1.0.140"
thiserror = "2.0.12"
url = "2.5.4"

[features]
unstable = []
